# GooglePhotosMatcher

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
.claude/plugins/compounding-engineering/: LICENSE
.claude/plugins/compounding-engineering/.claude-plugin/: plugin.json
.claude/plugins/compounding-engineering/agents/: architecture-strategist.md  best-practices-researcher.md  code-simplicity-reviewer.md  (+14 more)
files/: __init__.py  auxFunctions.py  cli.py  config.py  logger.py  main.py  video_metadata.py  window.py
tests/: __init__.py  conftest.py  test_check_same_name.py  test_cli.py  test_exif.py  test_fix_title.py  test_search_media.py
todos/: 001-pending-p1-fix-image-resource-leak.md  002-pending-p1-fix-path-traversal-vulnerability.md  003-pending-p1-fix-on2-performance-bug.md  004-pending-p1-convert-mediamoved-to-set.md  005-pending-p1-fix-none-string-comparison.md  006-pending-p2-fix-hardcoded-editado.md  007-pending-p2-use-cross-platform-paths.md  008-pending-p2-add-json-validation.md  009-pending-p2-refactor-searchmedia-complexity.md  010-pending-p2-consolidate-exif-operations.md  011-pending-p2-replace-wildcard-imports.md  012-pending-p2-add-requirements-txt.md  013-pending-p3-add-type-hints.md  014-pending-p3-fix-typos.md  015-pending-p3-add-recursion-limit.md  016-pending-p1-add-unit-tests.md  017-pending-p1-add-logging.md  018-pending-p1-cross-platform-support.md  019-pending-p2-cli-interface.md  020-pending-p2-dry-run-mode.md  021-pending-p2-config-file.md  022-pending-p3-extended-format-support.md  023-pending-p3-parallel-processing.md
(+6 files in other folders)
